--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
     "three": "^0.159.0",
