--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pmndrs/assets": "^1.6.0",
     "@react-three/drei": "^9.92.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
+    "suspend-react": "^0.1.3",
     "three": "^0.159.0",
     "valtio": "^1.12.1",
     "web-vitals": "^2.1.4"
