--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
+    "react-dat-gui": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
-    "suspend-react": "^0.1.3",
     "three": "^0.159.0",
     "valtio": "^1.12.1",
     "web-vitals": "^2.1.4"
