--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
+    "suspend-react": "^0.1.3",
     "three": "^0.159.0",
     "valtio": "^1.12.1",
     "web-vitals": "^2.1.4"
