--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "lamina": "^1.1.23",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dat-gui": "^4.1.1",
